V 
* features
- 
* bug fixes
- 

V 1.5.1 
* features
- 
* bug fixes
- fix crash on start

V 1.5.0
* features
- run script on profile switch (beta and for power users)
- call in progress profile (non beta now)
- pulsed service switches (non beta now)
- manually choose a profile
- layout changes
- German translation
* bug fixes
- 
Those last changes where done while my thoughts where in Japan.
Hopefully we will never ever see such a nuclear disaster again!

V 1.4.2
* features
- Added option (in settings) to enable userspace governor
* bug fixes
-

V 1.4.1
* features
- 
* bug fixes
- removed userspace governor
- updated Italian translation
- fix capability check

V 1.4.0
* features
- pulsed service switches (beta)
- Italian translation
* bug fixes
- 

V 1.3.1
* features
- 3G only state
* bug fixes
- Fix user level chooser for small devices

V 1.3.0
* features
- ask for user experience level
- mobiledata connection switch
- call in progress profile (beta)
* bug fixes
- 

V  1.2.3
* features
- reverted to 1.2.1
* bug fixes
-
 
V 1.2.2
* features
- 
* bug fixes
- fix force closes

V 1.2.1
* features
- Additional FAQs
- reorganised setting
* bug fixes
- fixes for force closes and freezes
- fix start on boot (it is now managed be enable profiles)

V 1.2.0
* features
- do not change wifi while connected to a network (settings default: off)
- do not change profiles during a phone call at all (settings default: off)
- optional custom temperature for battery hot state
* bug fixes
- fix system battery hot state
- fixes for force closes and freezes
- Toast notifications are gone (sorry!)


V 1.1.3
* features
- new user experience levels (power user mode removed)
* bug fixes
- toast notifications are back
- fix phone call hang up on mobiledata change

V 1.1.2
* features
- 
* bug fixes
- fix freeze on install profiles
- fix min displayed frequency to include this frequency

V 1.1.1
* features
- 
* bug fixes
- fix power usage display
 
V 1.1.0
* features