@@ -1,7 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources><string name="msg_up_threshhold_has_to_be_between_0_and_100">The up threshhold is given in % and has to be between 0 and 100.</string>
-<string name="msg_down_threshhold_has_to_be_between_0_and_100">The down threshhold is given in % and has to be between 0 and 100.</string>
-<string name="msg_up_threshhold_smaler_than_the_down_threshold">The up threshhold has to be bigger than the down threshold.</string>
-<string name="msg_threshhold_NaN">The threshhold has to be a integer number.</string>
-
+<resources>
 </resources>
