@@ -4,6 +4,12 @@ V
 * bug fixes
 - 
 
+V 
+* features
+- ensure correct frequency and threshold values
+* bug fixes
+- 
+
 V 1.5.1 
 * features
 - 
